Homework - debug