@@ -1,7 +1,7 @@
-package com.example.demorecipeapp.services.impl;
+package com.example.demorecipeapp.services;
 
+import com.example.demorecipeapp.model.Ingredient;
 import com.example.demorecipeapp.model.Recipe;
-import com.example.demorecipeapp.services.RecipeService;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
@@ -10,9 +10,12 @@ import org.springframework.web.multipart.MultipartFile;
 
 import javax.annotation.PostConstruct;
 import java.io.IOException;
+import java.net.URISyntaxException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -23,15 +26,20 @@ public class RecipeServiceImpl implements RecipeService {
     private final Map<Long, Recipe> recipeMap = new HashMap<>();
     private Long counter = 0L;
     private final Path path;
+    private final Path pathToTxtTemplate;
     private final ObjectMapper objectMapper;
 
     public RecipeServiceImpl(@Value("${application.file.recipes}") String path) {
         try {
-            this.path = Path.of(path);
+            this.path = Paths.get(path);
+            this.pathToTxtTemplate = Paths.get(RecipeServiceImpl.class.getResource("recipesTemplate.txt").toURI());
             this.objectMapper = new ObjectMapper();
         } catch (InvalidPathException e) {
             e.printStackTrace();
             throw e;
+        } catch (URISyntaxException e) {
+            e.printStackTrace();
+            throw new RuntimeException(e);
         }
     }
 
@@ -116,5 +124,34 @@ public class RecipeServiceImpl implements RecipeService {
         } catch (IOException e) {
             e.printStackTrace();
         }
+    }
+
+    @Override
+    public byte[] exportTxt() {
+        try {
+            String template = Files.readString(pathToTxtTemplate, StandardCharsets.UTF_8);
+            StringBuilder stringBuilder = new StringBuilder();
+            for (Recipe recipe : recipeMap.values()) {
+                StringBuilder ingredients = new StringBuilder();
+                StringBuilder steps = new StringBuilder();
+                for (Ingredient ingredient : recipe.getIngredients()) {
+                    ingredients.append(" - ").append(ingredient).append("\n");
+                }
+                int stepCounter = 1;
+                for (String step : recipe.getSteps()) {
+                    steps.append(stepCounter++).append(". ").append(step).append("\n");
+
+                }
+                String recipeData = template.replace("%title%", recipe.getTitle())
+                        .replace("%cookingTime%", String.valueOf(recipe.getCookingTime()))
+                        .replace("%ingredients%", ingredients.toString())
+                        .replace("%steps%", steps.toString());
+                stringBuilder.append(recipeData).append("\n\n\n");
+            }
+            return stringBuilder.toString().getBytes(StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return null;
     }
 }
